[package]
name = "streamdeck-rs"
version = "0.4.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Unofficial Stream Deck SDK for Rust"
repository = "https://github.com/mdonoughe/streamdeck-rs/"
readme = "README.md"
keywords = ["streamdeck", "stream-deck"]
categories = ["api-bindings", "gui"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "mdonoughe/streamdeck-rs" }

[dependencies]
failure = "0.1.5"
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-dns-unofficial = "0.4"
tokio-tcp = "0.1.3"
tokio-tungstenite = { version = "0.6", default-features = false, features = [] }
tungstenite = { version = "0.6", default-features = false, features = [] }
url = "1.7"
slog = { version = "2.4", optional = true }

[features]
default = ["logging"]
logging = ["slog"]
