[package]
name = "streamdeck-rs"
version = "0.6.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Unofficial Stream Deck SDK for Rust"
repository = "https://github.com/mdonoughe/streamdeck-rs/"
readme = "README.md"
keywords = ["streamdeck", "stream-deck"]
categories = ["api-bindings", "gui"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "mdonoughe/streamdeck-rs" }

[dependencies]
failure = "0.1"
futures = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "1.5.0"
tokio-tungstenite = { version = "0.14" }
tungstenite = { version = "0.13", default-features = false }
url = "2"
slog = { version = "2", optional = true }

[features]
default = ["logging"]
logging = ["slog"]
